--- a/src/application/app/application/templates/pages/t_layout.html
+++ b/src/application/app/application/templates/pages/t_layout.html
@@ -37,7 +37,7 @@
     </div>
 </header>
 <body class="w-screen h-screen">
-    <div class="flex w-1\/5 h-full ">
+    <div class="flex w-1\/5 h-full fixed ">
                 <div class="navbar flex flex-col">
                     <div>
 
@@ -51,8 +51,7 @@
                         </div>
                     </div>
     </div>
-    <div class= "content w-full flex-col h-full">
         {%block content%}{%endblock%}
-    </div>
+
 </body>
 </html>
