--- a/src/application/app/application/templates/errors/e_forbidden.html
+++ b/src/application/app/application/templates/errors/e_forbidden.html
@@ -1,9 +1,11 @@
 {% extends 'pages/t_layout.html' %}
 {%block content%}
 {{super()}}
-<div class = " m-auto text-center text-black">
-    Well it's look like <br>you should not be here !!
-    <img class="m-auto object-contain h-96 w-150 object-center" src="/static/img/forbiden.png" alt="forbiden.png">
-    <a href="/" class="text-white bg-gray-400 rounded-md px-3 py-1 text-m font-medium">HOME</a>
+<div class= "content flex-col w-full h-full">
+    <div class = " m-auto flex-col text-center text-black">
+        Well it's look like <br>you should not be here !!
+        <img class="m-auto object-contain h-96 w-150 object-center" src="/static/img/forbiden.png" alt="forbiden.png">
+        <a href="/" class="text-white bg-gray-400 rounded-md px-3 py-1 text-m font-medium">HOME</a>
+    </div>
 </div>
 {%endblock%}
