--- a/src/application/app/application/templates/pages/t_configs_on_the_go.html
+++ b/src/application/app/application/templates/pages/t_configs_on_the_go.html
@@ -1,18 +1,19 @@
 {% extends 'pages/t_layout.html' %}
 {%block content%}
 {{super()}}
-    <div class= "content flex h-full w-full">
-        <div class="border-2 w-1\/2 w-full flex h-full flex-col" >
-            <div class="h-full w-full"><textarea class=" resize-y h-full border-black border-2 w-full rounded-md" name="config"></textarea></div>
-            <div class="1\/6  h-full w-full items-center text-center m-auto"><button class="hover:bg-blue-100 px-2 py-2 rounded-md">Send-config</button></div>
+    <div class= "content flex flex-grow h-full w-full">
+        <div class="border-2 w-1\/2 w-full flex-grow flex h-full flex-col" >
+            <div class="h-full w-full p-1"><textarea class=" resize-y h-full border-black border-2 w-full rounded-md" id="config_input" name="config"></textarea></div>
+            <div class="1\/6  h-full w-full items-center text-center m-auto"><button onclick="setConfig_input('test')" class="hover:bg-blue-100 px-2 py-2 rounded-md">Send-config</button></div>
         </div>
-        <div class="border-2 w-1\/2 w-full">
+        <div class="border-2 flex-grow w-1\/2 w-full">
+            <div class="text-center m-auto w-full"><button class="px-1 m-auto" onclick="ShowAndHide('interface')">Interfaces</button><button class="px-1 m-auto" onclick="ShowAndHide('vlans')">Vlans</button><button class="px-1 m-auto" onclick="ShowAndHide('trunks')">Trunks</button></div>
             <div class="flex flex-col w-full h-full">
-                <div class="h-2\/5 w-full h-full overflow-x-scroll">
+                <div class="h-2\/5 w-full h-full overflow-x-scroll border-1" style="display: none;" id=interface>
                     <table class="table-fixed w-full h-full border-collapse border border-gray-400 m-auto overflow-scroll">
                         <thead>
                             <tr>
-                                <th colspan="3"> Interface</th>
+                                <th colspan="3">Interfaces</th>
                             </tr>
                             <tr>
                                 <th class="border border-gray-400">Name</th>
@@ -22,20 +23,25 @@
                         </thead>
                         <tbody>
                             {%for interface in interfaces%}
+
                                 <tr>
-                                    <th class="border border-gray-400 py-1">{{interface['name']}}</th>
-                                    <th class="border border-gray-400 py-1">{{interface['vlan']['description']}}</th>
-                                    <th class="border border-gray-400 py-1">{{interface['status']}}</th>
+                                    <th class="border border-gray-400"><button ondblclick="setConfig_input(({{interface}}))">{{interface['name']}}</button></th>
+                                    <th class="border border-gray-400">{{interface['vlan']['description']}}</th>
+                                    {%if interface['status'] == 'up'%}
+                                    <th class="border border-gray-400 bg-green-200">{{interface['status']}}</th>
+                                    {%else%}
+                                    <th class="border border-gray-400 bg-red-200">{{interface['status']}}</th>
+                                    {%endif%}
                                 </tr>
                             {%endfor%}
                         </tbody>
                     </table>
                 </div>
-                <div class="h-1\/5 w-full h-full overflow-x-scroll">
+                <div class="h-1\/5 w-full h-full overflow-x-scroll "  id=vlans style="display: none;">
                     <table class="table-fixed w-full h-full border-collapse border border-gray-400 m-auto overflow-scroll">
                         <thead>
                             <tr>
-                                <th colspan="2"> Vlan</th>
+                                <th colspan="2">Vlans</th>
                             </tr>
                             <tr>
                                 <th class="border border-gray-400">Name</th>
@@ -52,11 +58,11 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="h-2\/5 w-full h-full overflow-x-scroll">
+                <div class="h-2\/5 w-full h-full overflow-x-scroll" id=trunks style="display: none;">
                     <table class="table-fixed w-full h-full border-collapse border border-gray-400 m-auto overflow-scroll">
                         <thead>
                             <tr>
-                                <th colspan="4"> Trunk</th>
+                                <th colspan="4">Trunks</th>
                             </tr>
                             <tr>
                                 <th class="border border-gray-400">Interface</th>
@@ -70,7 +76,11 @@
                                 <tr>
                                     <th class="border border-gray-400">{{trunk['interface']['name']}}</th>
                                     <th class="border border-gray-400">{{trunk['interface']['vlan']['description']}}</th>
-                                    <th class="border border-gray-400">{{trunk['interface']['status']}}</th>
+                                    {%if trunk['interface']['status'] == 'up'%}
+                                    <th class="border border-gray-400 bg-green-200">{{trunk['interface']['status']}}</th>
+                                    {%else%}
+                                    <th class="border border-gray-400 bg-red-200">{{trunk['interface']['status']}}</th>
+                                    {%endif%}
                                     <th class="border border-gray-400">
                                         <ul>
                                             {%for tagged in trunk['tagged_vlans']%}
@@ -85,6 +95,21 @@
                 </div>
             </div>
         </div>
-        
     </div>
+    <script>
+        function ShowAndHide(sectionName) {
+            var x = document.getElementById(sectionName);
+            if (x.style.display == 'none') {
+                x.style.display = 'block';
+            } else {
+                x.style.display = 'none';
+            }
+        }
+    </script>
+    <script>
+        function setConfig_input(config) {
+            var conf_interface = JSON.stringify(config)
+            document.getElementById("config_input").value = conf_interface;
+        }
+        </script>
 {%endblock%}
