--- a/src/app/application/templates/pages/t_configs_on_the_go.html
+++ b/src/app/application/templates/pages/t_configs_on_the_go.html
@@ -4,7 +4,7 @@
     <div class= "content flex flex-grow h-full w-full">
         <div class="border-2 w-1\/2 w-full flex-grow flex h-full flex-col" >
             <div class="h-full w-full p-1"><textarea class=" resize-y h-full border-black border-2 w-full rounded-md" id="config_input" name="config"></textarea></div>
-            <div class="1\/6  h-full w-full items-center text-center m-auto"><button onclick="setConfig_input('test')" class="hover:bg-blue-100 px-2 py-2 rounded-md">Send-config</button></div>
+            <div class="1\/6  h-full w-full items-center text-center m-auto"><button onclick="" class="hover:bg-blue-100 px-2 py-2 rounded-md">Send-config</button></div>
         </div>
         <div class="border-2 flex-grow w-1\/2 w-full">
             <div class="text-center m-auto w-full"><button class="px-1 m-auto" onclick="ShowAndHide('interface')">Interfaces</button><button class="px-1 m-auto" onclick="ShowAndHide('vlans')">Vlans</button><button class="px-1 m-auto" onclick="ShowAndHide('trunks')">Trunks</button></div>
@@ -23,13 +23,6 @@
                         </thead>
                         <tbody>
                             {%for interface in interfaces%}
-                                {% for val in interface %}
-                                     {% if val is none %}
-                                         null,
-                                     {% else %}
-                                         {{ val }},
-                                     {% endif %}
-                                {% endfor %}
                                 <tr>
                                     <th class="border border-gray-400"><button ondblclick="setConfig_input(({{interface}}))">{{interface['name']}}</button></th>
                                     <th class="border border-gray-400">{{interface['vlan']['description']}}</th>
@@ -102,6 +95,9 @@
             </div>
         </div>
     </div>
+
+{%endblock%}
+{%block script%}
     <script>
         function ShowAndHide(sectionName) {
             var x = document.getElementById(sectionName);
