[FRONTEND] Corrections and edit interface

--- a/src/app/application/templates/pages/t_configs_on_the_go.html
+++ b/src/app/application/templates/pages/t_configs_on_the_go.html
@@ -61,8 +61,8 @@
                     </tbody>
                 </table>
             </div>
-            <div class="h-2\/5 w-full h-full overflow-x-scroll" id=trunks style="display: none;">
-                <table class=" w-full h-full border-collapse border border-gray-400 m-auto overflow-scroll">
+            <div class="h-2/5 w-full h-full overflow-scroll flex row" id=trunks style="display: none;">
+                <table class="h-auto w-full overflow-scroll border-collapse border border-gray-400 m-auto">
                     <thead>
                     <tr>
                         <th colspan="4">Trunks</th>
