--- a/src/app/application/templates/pages/t_interface.html
+++ b/src/app/application/templates/pages/t_interface.html
@@ -24,7 +24,7 @@
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="description">
                         Vlan
                     </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="description" type="text" name="description" value="{{interface.vlan.dot1q_id}}" required>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="description" type="text" name="vlan" value="{{interface.vlan.dot1q_id}}" required>
                 </div>
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
                     Enregistrer
