[FRONTEND] Corrected select bug, layout

--- a/src/app/application/templates/pages/t_config.html
+++ b/src/app/application/templates/pages/t_config.html
@@ -1,5 +1,25 @@
 {% extends 'pages/t_layout.html' %}
 {%block content%}
 {{super()}}
-Config
+<!-- Config list with an apply button, and a store current config button -->
+<div class="grid md:grid-cols-2 grid-rows-2 flex flex-grow md:mt-5">
+    <div class="m-2 p-2 shadow-lg">
+        <h1 class="text-2xl font-bold text-center">Actions disponibles</h1>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+                onclick="">Apply</button>
+        <div class="flex flex-row">
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+                onclick="">Save current as</button>
+            <input type="text" class="bg-blue-100 text-white font-bold py-2 px-4 rounded"
+                onclick="">
+        </div>
+    </div>
+    <div class="w-full m-2 p-2 shadow-lg">
+        <h1 class="text-2xl font-bold text-center">Configurations disponibles</h1>
+        {% for config in configs %}
+            <button class="bg-green-200 hover:bg-green-300 text-white font-bold py-2 px-4 rounded-full"
+                    onclick="">{{config.name}}</button>
+        {% endfor %}
+    </div>
+</div>
 {%endblock%}
