--- a/src/app/application/templates/pages/t_layout.html
+++ b/src/app/application/templates/pages/t_layout.html
@@ -22,6 +22,7 @@
                 <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
             </svg>
         </button>
+    {% if request.path in select_paths %}
     <div>
         <select class="header text-white text-sm md:text-xl align-middle" onchange="if (this.value) window.location.href=this.value">
             {%for room in api%}
@@ -33,6 +34,7 @@
             {%endfor%}
         </select>
     </div>
+    {%endif%}
     <div class="flex-auto text-center">
         <p class="text-sm md:text-xl align-middle">{{title}}</p>
     </div>
@@ -47,25 +49,24 @@
             <button class="px-5 text-sm md:text-xl align-middle"><a href="/login">Login</a></button>
         </div>
     {%endif%}
+    </div>
 </header>
 
-<main class=" w-full h-full">
+<main class="w-full h-full">
     <div class="flex w-full h-full">
-        <div class="flex w-1\/5 h-full flex-none overflow-y-none ">
-            <div class="navbar flex flex-col hidden md:block" id="navbar">
-                <div>
-                    <div class="flex flex-col w-44 items-justify px-8 py-4">
-                        <a href="/resume/"
-                           class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Resume</a>
-                        <a href="/config-otg/"
-                           class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Configs-OTG</a>
-                        <a href="/config/"
-                           class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Config</a>
-                    </div>
+        <div class="flex w-1\/5 h-full">
+            <div class="navbar flex flex-col hidden md:block h-full" id="navbar">
+                <div class="flex flex-col w-44 items-justify px-8 py-4 h-screen">
+                    <a href="/resume/"
+                       class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Resume</a>
+                    <a href="/config-otg/"
+                       class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Configs-OTG</a>
+                    <a href="/config/"
+                       class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Config</a>
                 </div>
             </div>
         </div>
-        <div class="flex w-full w-4\/5 h-full">
+        <div class="w-full h-full overflow-y-scroll">
             {%block content%}{%endblock%}
         </div>
     </div>
