--- a/src/app/application/templates/pages/t_login.html
+++ b/src/app/application/templates/pages/t_login.html
@@ -2,7 +2,7 @@
 {%block content%}
     {{super()}}
     <!-- login form -->
-    <div class="container w-full h-full flex flex-grow items-center justify-center">
+    <div class="container w-full h-screen flex flex-grow items-center justify-center overflow-none">
         <div class="row w-2/3 h-2/3 flex flex-grow justify-center">
             <form id="login-form" action="{{url_for('login')}}" method="post" role="form"
                   class="w-4/5 md:w-2/3 p-4 flex flex-col items-center shadow-2xl">
