--- a/src/app/application/templates/pages/t_configs_on_the_go.html
+++ b/src/app/application/templates/pages/t_configs_on_the_go.html
@@ -5,8 +5,23 @@
 <script src="{{url_for('static', filename='js/config_otg.js')}}"></script>
 <div class= "content flex flex-grow h-5/6 w-full flex-col md:flex-row mb-5 p-5">
     <div class="border-2 w-1\/2 w-full flex-grow flex md:h-full flex-col sm:h-2/5" >
-        <div class="h-full w-full p-1"><textarea class="resize-y h-full border-black border-2 w-full rounded-md" id="config_input" name="config"></textarea></div>
-        <div class="h-1/6 w-full items-center text-center m-auto"><button onclick="" class="hover:bg-blue-100 px-2 py-2 rounded-md">Send-config</button></div>
+        <form class="h-full w-full p-1" action="/send_config" id="config_form" method="post">
+            <div class="h-full w-full p-1"><textarea class="resize-y h-full border-black border-2 w-full rounded-md" form="config_form" id="config_input" name="config"></textarea></div>
+            <div class="h-1/6 w-full items-center text-center p-1 m-1">
+                 Config Name : <input class="border rounded" type="text" name="config_name">
+
+                <select name="host_name" id="host_name" form="config_form">
+                    {%for room in api%}
+                        {% if selected == room %}
+                            <option value="{{room}}" selected>{{room}}</option>
+                        {%else%}
+                            <option value="{{room}}">{{room}}</option>
+                        {%endif%}
+                    {%endfor%}
+                </select>
+                <input class="border rounded p-1 m-1" type="submit" value="Send">
+            </div>
+        </form>
     </div>
     <div class="border-2 flex-grow w-1\/2 w-full md:h-full h-3/5 overflow-y-scroll">
         <div class="text-center m-auto w-full h-8"><button class="px-1 m-auto" onclick="ShowAndHide('interface')">Interfaces</button><button class="px-1 m-auto" onclick="ShowAndHide('vlans')">Vlans</button><button class="px-1 m-auto" onclick="ShowAndHide('trunks')">Trunks</button></div>
@@ -26,7 +41,8 @@
                     <tbody>
                     {%for interface in interfaces%}
                     <tr>
-                        <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{interface}}))">{{interface['name']}}</button></th>
+                        <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{interface}}), '{{"interface_"+interface['name']}}')">{{interface['name']}}</button></th>
+
                         <th class="border border-gray-400 text-xs md:text-lg">{{interface['vlan']['description']}}</th>
                         {%if interface['status'] == 'up'%}
                         <th class="border border-gray-400 bg-green-200">{{interface['status']}}</th>
@@ -53,7 +69,7 @@
                     {%for vlan in vlans%}
                         {%if vlan['dot1q_id'] >=200%}
                             <tr>
-                                <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{vlan}}))">{{vlan['description']}}</button></th>
+                                <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{vlan}}), '{{"vlan_"+vlan['description']}}')">{{vlan['description']}}</button></th>
                                 <th class="border border-gray-400">{{vlan['dot1q_id']}}</th>
                             </tr>
                         {%endif%}
@@ -77,7 +93,7 @@
                     <tbody>
                     {%for trunk in trunks%}
                     <tr>
-                        <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{trunk}}))">{{trunk['interface']['name']}}</button></th>
+                        <th class="border border-gray-400 text-xs md:text-lg"><button onclick="setConfig_input(({{trunk}}), '{{"trunk_"+trunk['interface']['name']}}')">{{trunk['interface']['name']}}</button></th>
                         <th class="border border-gray-400">{{trunk['native_vlan']['description']}}</th>
                         {%if trunk['interface']['status'] == 'up'%}
                         <th class="border border-gray-400 bg-green-200">{{trunk['interface']['status']}}</th>
