--- a/src/app/application/templates/pages/t_layout.html
+++ b/src/app/application/templates/pages/t_layout.html
@@ -61,7 +61,7 @@
                        class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Resume</a>
                     <a href="/config-otg/"
                        class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Configs-OTG</a>
-                    <a href="/application/config/"
+                    <a href="/config/"
                        class="text-white hover:bg-gray-400 px-3 py-2 my-2 rounded-md text-m font-medium">Config</a>
                 </div>
             </div>
